--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-chartjs-2": "^5.3.1",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
