--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
+    "dayjs": "^1.11.19",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
@@ -18,6 +19,7 @@
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
+    "recharts": "^3.6.0",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
